--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha"
   },
   "author": "selgyun",
   "license": "ISC",
@@ -12,5 +12,8 @@
     "express": "^4.18.2",
     "npm": "^8.19.3",
     "socket.io": "^1.7.4"
+  },
+  "devDependencies": {
+    "mocha": "^10.1.0"
   }
 }
